force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <label>予算</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>予算名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>