force-app/main/default/objects/Budget__c/fields/BudgetSubmission__c.field-meta.xml
<CustomField>
    <fullName>BudgetSubmission__c</fullName>
    <label>予算申請</label>
    <referenceTo>BudgetSubmission__c</referenceTo>
    <relationshipLabel>予算</relationshipLabel>
    <relationshipName>BudgetSubmission</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>