force-app/main/default/objects/Budget__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>概算予算</fullName>
            </value>
            <value>
                <fullName>仮予算</fullName>
            </value>
            <value>
                <fullName>実行予算</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>