force-app/main/default/objects/Budget__c/fields/modification__c.field-meta.xml
<CustomField>
    <fullName>modification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>変更</label>
    <type>Checkbox</type>
</CustomField>