force-app/main/default/objects/Budget__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>項目名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>