force-app/main/default/objects/Budget__c/fields/note__c.field-meta.xml
<CustomField>
    <fullName>note__c</fullName>
    <label>備考</label>
    <length>100</length>
    <type>Text</type>
</CustomField>