force-app/main/default/objects/Budget__c/fields/quantity__c.field-meta.xml
<CustomField>
    <fullName>quantity__c</fullName>
    <label>重量・数量</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>