force-app/main/default/objects/Budget__c/fields/unit__c.field-meta.xml
<CustomField>
    <fullName>unit__c</fullName>
    <label>単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>t</fullName>
            </value>
            <value>
                <fullName>ヶ所</fullName>
            </value>
            <value>
                <fullName>枚</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>