force-app/main/default/objects/Budget__c/fields/unitprice__c.field-meta.xml
<CustomField>
    <fullName>unitprice__c</fullName>
    <label>単価</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>